--- a/LiquorPOS/MainWindow.xaml
+++ b/LiquorPOS/MainWindow.xaml
@@ -23,7 +23,8 @@
         <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="0,0,0,10">
             <Label Content="Scan Barcode:" VerticalAlignment="Center" FontWeight="Bold"/>
             <TextBox Width="300" Margin="10,0,0,0" FontSize="16"
-                     Text="{Binding BarcodeText, UpdateSourceTrigger=PropertyChanged}">
+                     Text="{Binding BarcodeText, UpdateSourceTrigger=PropertyChanged}"
+                     x:Name="BarcodeEntryTextBox">
                 <TextBox.InputBindings>
                     <KeyBinding Key="Enter" Command="{Binding ScanBarcodeCommand}"/>
                 </TextBox.InputBindings>
@@ -37,29 +38,66 @@
             <TextBlock Text="{Binding FoundItemPrice}" FontSize="16" Margin="10,0,0,0" MinHeight="20"/>
         </StackPanel>
 
-        <DataGrid Grid.Row="2" Margin="0,10,0,0"
+        <DataGrid x:Name="ScannedItemsDataGrid" Grid.Row="2" Margin="0,10,0,0"
                   ItemsSource="{Binding ScannedItemsList}"
+                  SelectedItem="{Binding SelectedItem, Mode=TwoWay}"
                   AutoGenerateColumns="False"
                   IsReadOnly="True"
                   CanUserAddRows="False"
                   HeadersVisibility="Column"
                   SelectionMode="Single"
                   FontSize="14">
+
+            <DataGrid.InputBindings>
+                <KeyBinding Key="Delete"
+                            Command="{Binding DeleteItemCommand}"
+                            CommandParameter="{Binding SelectedItem}"/>
+            </DataGrid.InputBindings>
+
+            <DataGrid.Resources>
+                <Style TargetType="DataGridRow">
+                    <EventSetter Event="PreviewMouseRightButtonDown" Handler="DataGridRow_PreviewMouseRightButtonDown"/>
+                    <Setter Property="ContextMenu">
+                        <Setter.Value>
+                            <ContextMenu DataContext="{Binding DataContext, ElementName=ScannedItemsDataGrid}">
+                                <MenuItem Header="Edit Qty"
+                                          Command="{Binding EditQuantityCommand}"
+                                          CommandParameter="{Binding PlacementTarget.DataContext, RelativeSource={RelativeSource AncestorType=ContextMenu}}"/>
+                                <MenuItem Header="Delete Item"
+                                          Command="{Binding DeleteItemCommand}"
+                                          CommandParameter="{Binding PlacementTarget.DataContext, RelativeSource={RelativeSource AncestorType=ContextMenu}}"/>
+                            </ContextMenu>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </DataGrid.Resources>
+
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Code" Binding="{Binding CodeNum}" Width="Auto"/>
-                <DataGridTextColumn Header="Brand" Binding="{Binding Brand}" Width="1.5*"/>
-                <DataGridTextColumn Header="Description" Binding="{Binding Description}" Width="2.5*"/>
-                <DataGridTextColumn Header="Type" Binding="{Binding Type}" Width="Auto"/>
-                <DataGridTextColumn Header="Size" Binding="{Binding Size}" Width="Auto"/>
-                <DataGridTextColumn Header="Price" Binding="{Binding Price, StringFormat=C}" Width="Auto"/>
+                <DataGridTextColumn Header="Qty" Binding="{Binding Quantity}" Width="Auto"/>
+                <DataGridTextColumn Header="Code" Binding="{Binding ProductDetails.CodeNum}" Width="Auto"/>
+                <DataGridTextColumn Header="Brand" Binding="{Binding ProductDetails.Brand}" Width="1.5*"/>
+                <DataGridTextColumn Header="Description" Binding="{Binding ProductDetails.Description}" Width="2.5*"/>
+                <DataGridTextColumn Header="Type" Binding="{Binding ProductDetails.Type}" Width="Auto"/>
+                <DataGridTextColumn Header="Size" Binding="{Binding ProductDetails.Size}" Width="Auto"/>
+                <DataGridTextColumn Header="Price" Binding="{Binding ProductDetails.Price, StringFormat=C}" Width="Auto"/>
             </DataGrid.Columns>
         </DataGrid>
 
-        <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
-            <TextBlock Text="Total:" FontWeight="Bold" FontSize="20" VerticalAlignment="Center"/>
-            <TextBlock Text="{Binding TotalPrice, StringFormat=C}" MinWidth="120" TextAlignment="Right"
-                       FontSize="20" Margin="10,0,0,0" VerticalAlignment="Center" FontWeight="Bold"/>
-        </StackPanel>
-
+        <Grid Grid.Row="3" Margin="0,10,0,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="1" Text="Total:" FontWeight="Bold" FontSize="20" VerticalAlignment="Center" Margin="0,0,10,0"/>
+            <TextBlock Grid.Column="2" Text="{Binding TotalPrice, StringFormat=C}" MinWidth="120" TextAlignment="Right"
+                       FontSize="20" Margin="0,0,0,0" VerticalAlignment="Center" FontWeight="Bold"/>
+            <Button Grid.Column="3" Content="Void Sale"
+                    Command="{Binding VoidSaleCommand}"
+                    FontSize="16" FontWeight="Bold"
+                    Margin="20,0,0,0" Padding="15,7"
+                    Background="OrangeRed" Foreground="White"/>
+        </Grid>
     </Grid>
 </Window>
