--- a/LiquorPOS/MainWindow.xaml
+++ b/LiquorPOS/MainWindow.xaml
@@ -4,8 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LiquorPOS"
-        xmlns:vm="clr-namespace:LiquorPOS.ViewModels"
-        mc:Ignorable="d"
+        xmlns:vm="clr-namespace:LiquorPOS.ViewModels" mc:Ignorable="d"
         Title="Liquor Store POS" Height="600" Width="900">
 
     <Window.DataContext>
@@ -23,7 +22,8 @@
         <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="0,0,0,10">
             <Label Content="Scan Barcode:" VerticalAlignment="Center" FontWeight="Bold"/>
             <TextBox Width="300" Margin="10,0,0,0" FontSize="16"
-                     Text="{Binding BarcodeText, UpdateSourceTrigger=PropertyChanged}">
+                     Text="{Binding BarcodeText, UpdateSourceTrigger=PropertyChanged}"
+                     x:Name="BarcodeEntryTextBox">
                 <TextBox.InputBindings>
                     <KeyBinding Key="Enter" Command="{Binding ScanBarcodeCommand}"/>
                 </TextBox.InputBindings>
@@ -39,27 +39,45 @@
 
         <DataGrid Grid.Row="2" Margin="0,10,0,0"
                   ItemsSource="{Binding ScannedItemsList}"
-                  AutoGenerateColumns="False"
+                  SelectedItem="{Binding SelectedItem, Mode=TwoWay}" AutoGenerateColumns="False"
                   IsReadOnly="True"
                   CanUserAddRows="False"
                   HeadersVisibility="Column"
                   SelectionMode="Single"
                   FontSize="14">
+
+            <DataGrid.InputBindings>
+                <KeyBinding Key="Delete"
+                            Command="{Binding DeleteItemCommand}"
+                            CommandParameter="{Binding SelectedItem}"/>
+            </DataGrid.InputBindings>
+
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Code" Binding="{Binding CodeNum}" Width="Auto"/>
-                <DataGridTextColumn Header="Brand" Binding="{Binding Brand}" Width="1.5*"/>
-                <DataGridTextColumn Header="Description" Binding="{Binding Description}" Width="2.5*"/>
-                <DataGridTextColumn Header="Type" Binding="{Binding Type}" Width="Auto"/>
-                <DataGridTextColumn Header="Size" Binding="{Binding Size}" Width="Auto"/>
-                <DataGridTextColumn Header="Price" Binding="{Binding Price, StringFormat=C}" Width="Auto"/>
+                <DataGridTextColumn Header="Qty" Binding="{Binding Quantity}" Width="Auto"/>
+                <DataGridTextColumn Header="Code" Binding="{Binding ProductDetails.CodeNum}" Width="Auto"/>
+                <DataGridTextColumn Header="Brand" Binding="{Binding ProductDetails.Brand}" Width="1.5*"/>
+                <DataGridTextColumn Header="Description" Binding="{Binding ProductDetails.Description}" Width="2.5*"/>
+                <DataGridTextColumn Header="Type" Binding="{Binding ProductDetails.Type}" Width="Auto"/>
+                <DataGridTextColumn Header="Size" Binding="{Binding ProductDetails.Size}" Width="Auto"/>
+                <DataGridTextColumn Header="Price" Binding="{Binding ProductDetails.Price, StringFormat=C}" Width="Auto"/>
             </DataGrid.Columns>
         </DataGrid>
 
-        <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
-            <TextBlock Text="Total:" FontWeight="Bold" FontSize="20" VerticalAlignment="Center"/>
-            <TextBlock Text="{Binding TotalPrice, StringFormat=C}" MinWidth="120" TextAlignment="Right"
-                       FontSize="20" Margin="10,0,0,0" VerticalAlignment="Center" FontWeight="Bold"/>
-        </StackPanel>
-
+        <Grid Grid.Row="3" Margin="0,10,0,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="1" Text="Total:" FontWeight="Bold" FontSize="20" VerticalAlignment="Center" Margin="0,0,10,0"/>
+            <TextBlock Grid.Column="2" Text="{Binding TotalPrice, StringFormat=C}" MinWidth="120" TextAlignment="Right"
+                       FontSize="20" Margin="0,0,0,0" VerticalAlignment="Center" FontWeight="Bold"/>
+            <Button Grid.Column="3" Content="Void Sale"
+                    Command="{Binding VoidSaleCommand}"
+                    FontSize="16" FontWeight="Bold"
+                    Margin="20,0,0,0" Padding="15,7"
+                    Background="OrangeRed" Foreground="White"/>
+        </Grid>
     </Grid>
 </Window>
