--- a/LiquorPOS/App.xaml
+++ b/LiquorPOS/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="LiquorPOS.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:LiquorPOS"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:LiquorPOS">
     <Application.Resources>
          
     </Application.Resources>
